test: zerolog
